--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@ body {
 }
 
 header {
-    background-color:rgba(0, 119, 255, 0.645);
+    background-color:rgba(144, 255, 101, 0.645);
+    position: sticky;
+    top: 0px;
 }
 
 footer {
@@ -20,11 +22,18 @@ footer {
 .header__nav {
     display: flex;
 }
+.navbar-expand-lg{
+    padding: 0px;
+}
+
+.container-fluid {
+    padding: 0px 0px;
+}
 
 .header__logo {
-    display: inline;
-    height: 80px;
-    width: 80px;
+    height: 70px;
+    width: 60px;
+    padding: 10px 0 10px 6px;
 }
 
 .main__titulo--inicio {
@@ -65,11 +74,20 @@ footer {
 }
 .footer__indice {
     grid-area: indice;
-    padding: 20px;
+    padding: 30px;
     list-style: none;
     padding-bottom: 10px;
 }
 
+/* .footer__item:hover {
+    transform:scale(1.1, 1.1);
+    transition: all 1s;
+} */
+
+a {
+    color: white;
+    font-size: 20px;
+}
 .footer__redes {
     grid-area: redes;
     display: flex;
@@ -85,8 +103,8 @@ footer {
 }
 
 .footer__logos {
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     padding: 20px;
 }
 
@@ -95,10 +113,14 @@ footer {
     transition: all 1s;
 }
 
-a {
+.ala {
     text-decoration: none;
-    color: black;
-    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .lista__desordenada {
@@ -120,10 +142,7 @@ a {
     transition: all 1s;
 }
 
-.footer__item:hover {
-    transform:scale(1.1, 1.1);
-    transition: all 1s;
-}
+
 
 .nav {
     padding-top: 0px;
@@ -185,6 +204,7 @@ h2 {
 
 /* GALERIA */
 
+
 .galeria__grid {
     display: grid;
     width: 96vw;
@@ -194,6 +214,10 @@ h2 {
     column-gap: 15px;
     row-gap: 15px;
     padding: 20px 20px 0 20px;
+}
+
+.container {
+    margin: 0px;
 }
 
 .patada-roja {
@@ -259,6 +283,49 @@ h2 {
 
 /* FORMULARIO */
 
+.mb-3 {
+    width: 500px;
+}
+
+.formulario__uno {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.img__formulario {
+    width: 400px;
+    height: 400px;
+}
+
+.btn-outline-success {
+    margin: 0 0 15px;
+    color: black;
+    border-color: black;
+    border: 3px solid;
+
+}
+
+.btn-outline-success:hover {
+    color: rgb(20, 111, 0);
+    background-color: rgb(144, 255, 101, 0.645);
+    border: 6px solid;
+    transform: scale(1.00 , 1.00);
+}
+
+
+.formulario__imagen {
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 100px;
+}
+
+.formulario__texto{
+    text-align: center;
+    padding: 10px 0 10px;
+}
+
 .main__titulo--formulario {
     padding: 20px 0 0 16px;
     font-size: 35px;
@@ -287,6 +354,13 @@ h2 {
         display: inline;
         height: 80px;
         width: 80px;
+    }
+    .navbar-expand-lg{
+        padding: 0px;
+    }
+    
+    .container-fluid {
+        padding: 0px 0px;
     }
     header {
         position: static;
@@ -369,6 +443,8 @@ h2 {
         row-gap: 15px;
         padding: 20px 0 20px 0;
     }
+
+
     .patada-roja {
         grid-column: 1/2;
         grid-row: 1/2;
@@ -421,6 +497,14 @@ h2 {
     .casillero__boton {
         padding: 20px 0 100px 16px;
     }
+
+    .formulario__imagen {
+        display: none;
+    }
+
+    .mb-3 {
+        width: 70vw;
+    }
 }
 
 /* media querie de celular*/
@@ -460,6 +544,10 @@ h2 {
         grid-template-rows: 1fr 1fr 1fr;
         row-gap: 15px;
         padding: 20px 0 20px 0;
+    }
+
+    .container {
+        padding: 0px 0px;
     }
     .patada-roja {
         grid-column: 1/2;
@@ -554,6 +642,15 @@ h2 {
     .casillero__boton {
         padding: 20px 0 100px 16px;
     }
+
+    .formulario__imagen {
+        display: none;
+    }
+
+    .mb-3 {
+        width: 70vw;
+    }
+
                 /* FOOTER */
     footer {
         display: grid;
