--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,6 @@ body {
 
 header {
     background-color:rgba(144, 255, 101, 0.645);
-    position: sticky;
-    top: 0px;
 }
 
 footer {
@@ -18,6 +16,12 @@ footer {
 }
 
  /* indux */
+
+.pelota__futbol {
+    height: 95vh;
+    width: 100%;
+    padding: 20px 0px 60px 0px;
+}
 
 .header__nav {
     display: flex;
@@ -44,28 +48,14 @@ footer {
     background-color: white;
 }
 
-.galeria {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: flex-start;
-}
 
-p {
+/* p {
     font-size: 40px;
     font-family:Arial, Helvetica, sans-serif;
     padding: 20px 0 50px 10px;
     font-style: italic;
-}
+} */
 
-.galeria__img--futbol {
-    width: 700px;
-    height: 400px;
-    padding: 15px 15px 50px 20px;
-}
 
 footer {
     display: grid;
@@ -79,11 +69,6 @@ footer {
     padding-bottom: 10px;
 }
 
-/* .footer__item:hover {
-    transform:scale(1.1, 1.1);
-    transition: all 1s;
-} */
-
 a {
     color: white;
     font-size: 20px;
@@ -91,7 +76,7 @@ a {
 .footer__redes {
     grid-area: redes;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
 }
 
 .footer__derechos {
@@ -142,8 +127,6 @@ a {
     transition: all 1s;
 }
 
-
-
 .nav {
     padding-top: 0px;
 }
@@ -156,19 +139,6 @@ a {
     font-size: 20px;
 }
 
-.foto__portada {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.imagen__foto--portada {
-    width: 1300px;
-    height: 600px;
-    margin: 0px;
-    border: 30px double white;
-    margin: 20px;
-}
 
 /* QUIENES SOMOS */
 
@@ -386,7 +356,9 @@ h2 {
         grid-column: 2/3;
         grid-row: 1/2;
         display: flex;
-        justify-content: flex-end;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .footer__derechos {
         font-size: 25px;
@@ -394,6 +366,12 @@ h2 {
         grid-row: 2/3;
         display: flex;
         justify-content: flex-end;
+    }
+
+    .texto {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
                 /* INDEX */
@@ -513,7 +491,11 @@ h2 {
     .nav-item {
     padding-left: 0px;
     }
-
+    .pelota__futbol {
+        height: 60vh;
+        width: 100%;
+        padding: 20px 0px 60px 0px;
+    }
     .nav {
         padding-top: 20px;
     }
@@ -666,7 +648,9 @@ h2 {
         grid-column: 1/2;
         grid-row: 2/3;
         display: flex;
-        justify-content: flex-end;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
     .footer__derechos {
         font-size: 25px;
