--- a/scss/_mediaquerie.scss
+++ b/scss/_mediaquerie.scss
@@ -223,6 +223,11 @@ padding: 0px 0px;
     width: 250px;
     padding: 0 0 20px;
     }
+    &__somos {
+        font-size: 40px;
+        text-align: center;
+        text-decoration:underline 5px;
+    }
 }
 
     /* FORMATO */
