--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,10 @@ header {
       height: 250px;
       width: 250px;
       padding: 0 0 20px; }
+    .main__somos {
+      font-size: 40px;
+      text-align: center;
+      text-decoration: underline 5px; }
   /* FORMATO */
   .main__categorias {
     font-size: 35px;
