--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+.background-img, .galeria__grid .yo-claudio, .galeria__grid .patadita, .galeria__grid .cef, .galeria__grid .patada-roja {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+
 header {
   background-color: rgba(144, 255, 101, 0.645); }
 
@@ -79,33 +84,21 @@ header {
   .galeria__grid .yo-claudio {
     grid-area: yo-claudio;
     background-image: url("../imagenes/img1.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
     grid-column: 3/4;
     grid-row: 1/2; }
   .galeria__grid .patadita {
     grid-area: patadita;
     background-image: url("../imagenes/img2.jpg");
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
     grid-column: 2/3;
     grid-row: 1/3; }
   .galeria__grid .cef {
     grid-area: cef;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
     background-image: url("../imagenes/img3.jpg");
     grid-column: 3/4;
     grid-row: 2/3; }
   .galeria__grid .patada-roja {
     grid-area: patada-roja;
     background-image: url("../imagenes/img4.jpg");
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
     grid-column: 1/2;
     grid-row: 1/3; }
 
