--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,7 +3,7 @@
     font-size: 50px;
     text-align: center;
     padding: 20px 0;
-    border: solid 15px rgb(79, 62, 255);
+    border: solid 15px $color;
     background-color: white;
 
     &-portada {
