--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -11,9 +11,7 @@
     .yo-claudio {
     grid-area: yo-claudio;
     background-image: url("../imagenes/img1.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    @extend .background-img;
     grid-column: 3/4;
     grid-row: 1/2;
 
@@ -22,18 +20,14 @@
 .patadita {
     grid-area: patadita;
     background-image: url("../imagenes/img2.jpg");
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
+    @extend .background-img;
     grid-column: 2/3;
     grid-row: 1/3;
 }
 
 .cef {
     grid-area: cef;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    @extend .background-img;
     background-image: url("../imagenes/img3.jpg");
     grid-column: 3/4;
     grid-row: 2/3;
@@ -43,9 +37,7 @@
 .patada-roja {
     grid-area: patada-roja;
     background-image: url("../imagenes/img4.jpg");
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size:cover;
+    @extend .background-img;
     grid-column: 1/2;
     grid-row: 1/3;
 }
