--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,5 @@
+@import "variables";
+@import "operators";
 @import "header";
 @import "index";
 @import "quienes-somos";
@@ -6,7 +8,7 @@
 @import "contacto";
 @import "footer";
 @import "mediaquerie";
-@import "variables";
+
 
 *{
     margin: 0px;
