--- a/css/styles.css
+++ b/css/styles.css
@@ -264,7 +264,7 @@ header {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 15px;
-    padding: 20px 0 20px 0; }
+    padding-bottom: 20px; }
     .galeria__grid .patada-roja {
       grid-column: 1/2;
       grid-row: 1/2;
@@ -291,9 +291,12 @@ header {
     border: solid 15px #002f9d;
     background-color: white; }
     .main__futbol-portada {
-      height: 60vh;
+      height: 50vh;
       width: 100%;
-      padding: 20px 0px 60px 0px; }
+      padding: 20px 0px 60px 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
   /* QUIENES SOMOS */
   .main {
     display: flex;
