--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat; }
 
 header {
-  background-color: rgba(144, 255, 101, 0.645); }
+  background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%); }
 
 .header__logo {
   height: 70px;
@@ -23,7 +23,7 @@ header {
   justify-content: center;
   align-items: center; }
   .header .header__ala:after {
-    content: "|";
+    content: "";
     width: 10px;
     height: auto;
     padding-left: 6px; }
@@ -41,15 +41,16 @@ header {
   padding: 0px 0px; }
 
 .main__futbol {
-  font-size: 50px;
+  font-size: 60px;
   text-align: center;
   padding: 20px 0;
-  border: solid 15px #4f3eff;
-  background-color: white; }
+  margin: 30px;
+  border: solid 15px #04befe;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
   .main__futbol-portada {
     height: 95vh;
     width: 100%;
-    padding: 20px 0px 60px 0px; }
+    padding: 0px 0px 60px 0px; }
 
 .main {
   display: flex;
@@ -74,23 +75,25 @@ header {
 
 .galeria__grid {
   display: grid;
-  width: 96vw;
-  height: 120vh;
+  width: 98vw;
+  height: 100vh;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: auto;
   column-gap: 15px;
   row-gap: 15px;
-  padding: 20px 20px 0 20px; }
+  padding: 20px 0px 40px 20px; }
   .galeria__grid .yo-claudio {
     grid-area: yo-claudio;
     background-image: url("../imagenes/img1.jpg");
     grid-column: 3/4;
-    grid-row: 1/2; }
+    grid-row: 1/2;
+    width: auto; }
   .galeria__grid .patadita {
     grid-area: patadita;
     background-image: url("../imagenes/img2.jpg");
     grid-column: 2/3;
-    grid-row: 1/3; }
+    grid-row: 1/3;
+    width: 100%; }
   .galeria__grid .cef {
     grid-area: cef;
     background-image: url("../imagenes/img3.jpg");
@@ -173,6 +176,14 @@ header {
     flex-grow: 0;
     justify-content: center;
     align-items: center; }
+  /* INDEX */
+  .main__futbol-portada {
+    height: 100%;
+    width: 100%;
+    padding: 20px 0px 60px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
   /* FOOTER */
   .footer__texto {
     display: flex;
@@ -199,9 +210,9 @@ header {
     width: 96vw;
     height: 120vh;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     row-gap: 15px;
-    padding: 20px 0 20px 0; }
+    padding: 20px 0 20px 10px; }
     .galeria__grid .patada-roja {
       grid-column: 1/2;
       grid-row: 1/2;
@@ -259,10 +270,10 @@ header {
   /* GALERIA */
   .galeria__grid {
     display: grid;
-    width: 96vw;
+    width: 90vw;
     height: auto;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     row-gap: 15px;
     padding-bottom: 20px; }
     .galeria__grid .patada-roja {
@@ -284,19 +295,13 @@ header {
   .container {
     padding: 0px 0px; }
   /* INDEX */
-  .main__futbol {
-    font-size: 50px;
-    text-align: center;
-    padding: 20px 0;
-    border: solid 15px #002f9d;
-    background-color: white; }
-    .main__futbol-portada {
-      height: 50vh;
-      width: 100%;
-      padding: 20px 0px 60px 0px;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+  .main__futbol-portada {
+    height: 100%;
+    width: 100%;
+    padding: 20px 0px 60px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
   /* QUIENES SOMOS */
   .main {
     display: flex;
