--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -1,12 +1,12 @@
 .galeria__grid {
     display: grid;
-    width: 96vw;
-    height: 120vh;
+    width: 98vw;
+    height: 100vh;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     column-gap: 15px;
     row-gap: 15px;
-    padding: 20px 20px 0 20px;
+    padding: 20px 0px 40px 20px;
 
     .yo-claudio {
     grid-area: yo-claudio;
@@ -14,6 +14,7 @@
     @extend .background-img;
     grid-column: 3/4;
     grid-row: 1/2;
+    width: auto;
 
 }
 
@@ -23,6 +24,7 @@
     @extend .background-img;
     grid-column: 2/3;
     grid-row: 1/3;
+    width: 100%;
 }
 
     .cef {
