--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-    background-color:rgba(144, 255, 101, 0.645);
+    background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
 } 
     .header {
             &__logo {
@@ -19,7 +19,7 @@ header {
             justify-content: center;
             align-items: center;
             &:after {
-            content: "|";
+            content: "";
             width: 10px;
             height: auto;
             padding-left: 6px;
