--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,14 +1,14 @@
 
 .main__futbol {
-    font-size: 50px;
+    font-size: 60px;
     text-align: center;
     padding: 20px 0;
-    border: solid 15px $color;
-    background-color: white;
-
+    margin: 30px;
+    border: solid 15px #04befe;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     &-portada {
     height: 95vh;
     width: 100%;
-    padding: 20px 0px 60px 0px;
+    padding: 0px 0px 60px 0px;
 }
 }
