--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,23 +2,22 @@ header {
     background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
 } 
     .header {
-            &__logo {
+        &__logo {
             height: 70px;
             width: 60px;
             padding: 10px 0 10px 6px;
         }
-            &__nav {
+        &__nav {
             padding-top: 0px;
         }
-        .header__ala {
-            text-decoration: none;
-            font-family: Arial, Helvetica, sans-serif;
-            color: rgb(255, 255, 255);
-            font-size: 25px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            &:after {
+    .header__ala {
+        text-decoration: none;
+        font-family: Arial, Helvetica, sans-serif;
+        color: rgb(255, 255, 255);
+        font-size: 25px;
+        display: flex;
+        @include flex(center, center);
+        &:after {
             content: "";
             width: 10px;
             height: auto;
